# translator-lab6

./: .dockerignore  CMakeLists.txt  Makefile  README.md  main.cpp
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: bison-flex-install.md
examples/: run_tests.sh
examples/invalid/: bad.mini  bad_identifier.mini  bad_missing_expr.mini  bad_unary_minus.mini
examples/valid/: test.mini
files/: build.sh  expr.y  mini.l  mini.y
